<resources>
    <!-- SAMPLE TEXTS -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sed vel congue est, eu volutpat lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Sed vel congue est, eu volutpat lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Sed vel congue est, eu volutpat lacus.</string>
    <string name="sample_store_name">Aqua Water Station Muntinlupa Branch</string>
    <string name="sample_contact_no">(0916) 541–4338</string>
    <string name="sample_store_open_time">Open everyday from 9:00 A.M. to 9:00 P.M.</string>
    <string name="sample_address">B5 L20 Chrysanthemum St., Camella Sorrento, Panapaan IV, Bacoor, Cavite</string>
    <string name="sample_order_from_text">Ordering from Aqua Water Station Muntinlupa Branch</string>

    <string name="app_name">Aqua</string>
    <string name="txt_pending_orders">Pending Orders</string>
    <string name="txt_payment_history">Payment History</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_logout">Log out</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="txt_alkaline">Alkaline</string>
    <string name="txt_distilled">Distilled</string>
    <string name="txt_purified">Purified</string>
    <string name="txt_mineral">Mineral</string>
    <string name="txt_round_container">Round container</string>
    <string name="txt_slim_container">Slim container</string>

    <!-- SHOP INFO TEXTS -->
    <string name="lbl_contact_no">Primary contact number:</string>
    <string name="lbl_other_contact_no">Other contact number/s:</string>
    <string name="lbl_more_info">More info</string>
    <string name="lbl_less_info">Less info</string>
    <string name="lbl_order">Order</string>
    <string name="lbl_offered_water_types">Offered water types</string>
    <string name="lbl_offered_containers">Offered containers</string>
    <string name="txt_no_other_contact_no">No other contact numbers</string>

    <string name="store_status_open">Currently open</string>
    <string name="store_status_closed">Currently closed</string>
    <string name="store_open_holidays">Open during holidays</string>
    <string name="store_closed_holidays">Closed during holidays</string>
    <string name="store_open_time_format" formatted="false">Open everyday from %s to %s</string>

    <!-- ORDER TEXTS -->
    <string name="order_from_text_format">Ordering from %s</string>
    <string name="txt_default_container_count">0</string>

    <string name="lbl_total_price">Total price</string>
    <string name="lbl_confirm_order">Confirm order</string>
    <string name="lbl_swap_containers">Swap containers</string>
    <string name="swap_info">If you already have a container from this store, you can choose to swap the containers you have with the one you are ordering.</string>
    <string name="lbl_water_type">Water Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_is_swapping">Is swapping?</string>
    <string name="php_price_format">PHP %.2f</string>
    <string name="order_summary_sample"><![CDATA[Ordered <water-type> water which costs <price> from <shop-name> <with|without> swapping on <created-date>.]]></string>
    <string name="order_summary_format" formatted="false">Ordered %s water which costs %s from %s %s swapping on %s.</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_orders">Orders</string>
    <string name="txt_enable_location_services">Enable location services</string>
    <string name="txt_loc_svc_expl">In order to use this application and its features, you are required to enable your device\'s location services.</string>
    <string name="txt_loc_svc_not_enabled">Location services are not enabled.</string>
    <string name="txt_go_to_settings">Go to settings</string>
    <string name="txt_cancel">Cancel</string>
    <string name="terms">Terms and Conditions</string>
</resources>
