<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        tools:text="PHP 125.00"/>

    <TextView
        android:id="@+id/txt_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_price"
        android:layout_marginBottom="15dp"
        tools:text="@string/order_summary_format"/>

    <RelativeLayout
        android:id="@+id/container_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/txt_summary">

        <ImageView
            android:id="@+id/img_container_round"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_container_round"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/lbl_container_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_round_container"
            android:layout_marginBottom="2dp"
            android:layout_alignTop="@id/img_container_round"
            android:layout_toEndOf="@id/img_container_round"/>

        <TextView
            android:id="@+id/lbl_container_round_count"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Quantity"
            android:textStyle="italic"
            android:paddingEnd="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/lbl_container_round"
            android:layout_alignStart="@id/lbl_container_round"/>

        <TextView
            android:id="@+id/txt_container_round_count"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#4F4F4F"
            android:layout_alignBaseline="@id/lbl_container_round_count"
            android:layout_toEndOf="@id/lbl_container_round_count"
            tools:text="4"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_slim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/container_round">

        <ImageView
            android:id="@+id/img_container_slim"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_container_slim"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/lbl_container_slim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_slim_container"
            android:layout_marginBottom="2dp"
            android:layout_alignTop="@id/img_container_slim"
            android:layout_toEndOf="@id/img_container_slim"/>

        <TextView
            android:id="@+id/lbl_container_slim_count"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Quantity"
            android:textStyle="italic"
            android:paddingEnd="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/lbl_container_slim"
            android:layout_alignStart="@id/lbl_container_slim"/>

        <TextView
            android:id="@+id/txt_container_slim_count"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#4F4F4F"
            android:layout_alignBaseline="@id/lbl_container_slim_count"
            android:layout_toEndOf="@id/lbl_container_slim_count"
            tools:text="4"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/lbl_delivery_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delivery details"
        android:textColor="@android:color/darker_gray"
        android:labelFor="@+id/txt_delivery_details"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/container_slim"/>

    <TextView
        android:id="@id/txt_delivery_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/lbl_delivery_details"
        tools:text="@string/lorem_ipsum"/>

    <TextView
        android:id="@+id/lbl_delivery_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delivery address"
        android:textColor="@android:color/darker_gray"
        android:labelFor="@+id/txt_delivery_address"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/txt_delivery_details"/>

    <TextView
        android:id="@id/txt_delivery_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_below="@id/lbl_delivery_address"
        tools:text="@string/lorem_ipsum"/>

</RelativeLayout>